--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "bcrypt": "^5.1.0",
     "emoji-picker-react": "^4.1.1",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-auth": "^4.13.0",
     "nprogress": "^0.2.0",
@@ -43,6 +45,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/js-cookie": "^3.0.2",
+    "@types/multer": "^1.4.7",
     "@types/next": "^9.0.0",
     "@types/node": "18.8.2",
     "@types/nprogress": "^0.2.0",
