--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-emoji": "^4.2.0",
+    "react-multi-date-picker": "^3.3.4",
     "react-query": "^3.39.2",
+    "react-select": "^5.7.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.6",
     "recoil": "^0.7.5",
